2007-09-01  Junichi Uekawa  <dancer@debian.org>

	* parameter.c: 
	* forkexec.c: move fork/exec code from parameter.c

	* tests/014_ilistdump_test.sh: rewrite testsuite to use the generic dumping code.
	* Makefile: install dumping code.
	* cowdancer-ilistdump.1: document
	* cowdancer-ilistdump.c: create dumping code, from testsuite data.

2007-08-31  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.1: add reference to cowdancer-ilistcreate
	* cowdancer-ilistcreate.1: document.
	* Makefile (install): install ilistcreate.
	* cowdancer-ilistcreate.c: create new command.

2007-08-29  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (cpbuilder_create): add aptitude into chroot.

2007-08-21  Junichi Uekawa  <dancer@debian.org>

	* parameter.c: config file parsing improved by patch from Jan-Marek Glogowski 

2007-06-27  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): work around glibc bug: dlvsym failure
	isn't setting dlerror.
	(load_ilist): close fd used for mmap after use.

2007-06-21  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): try to load chown@@GLIBC_2.1
	if it exists.
	It is translated to lchown on i386, if I try to load the unversioned symbol.

2007-06-19  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (load_config_file): support BUILDPLACE
	configuration.
	(parse_parameter): make it an error that BUILDPLACE is not
	set. Default is set in pbuilderrc.
	(parse_parameter): process --distribution command-line option
	properly.

	* qemubuilder.8: 
	* cowbuilder.8: update documentation for dumpconfig.

	* qemubuilder.c (cpbuilder_help): 
	* cowbuilder.c (cpbuilder_help): 
	* parameter.c (parse_parameter): add dumpconfig command.

2007-06-17  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.8: add examples

	* qemubuilder.c (qemu_arch_qemu): change x86_64/i386 logic.

2007-06-09  Junichi Uekawa  <dancer@debian.org>

	* tests/014_ilistdump_test.sh: change deprecated sort +2 to -k 2
