@@ -210,7 +210,6 @@ __attribute__ ((constructor))
   initialize_functions();
 }
 
-
 /**
    check if i-node is to be protected, and if so, copy the file.  This
    function may fail, but the error cannot really be recovered; how
