@@ -6,15 +6,16 @@ cowdancer (0.38) UNRELEASED; urgency=low
   * Better error handling when loading config
 
   [ Junichi Uekawa ]
-  * document that i386/amd64 cross-arch building is not supported using
-    cowbuilder.
   * add aptitude into chroot for pbuilder-satisfydepends-aptitude.
   * add cowdancer-ilistcreate command, which creates ilist file.
   * add cowdancer-ilistdump command, for debugging purposes. It was
     included in the testsuite, but it is generally useful for
     troubleshooting.
-  
- -- Junichi Uekawa <dancer@debian.org>  Sat, 01 Sep 2007 12:07:52 +0900
+  * run cowdancer-ilistcreate within chroot if it exists
+  - Bug fix: "cowbuilder cross-arch building support."
+    (Closes: #432573).
+
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 01 Sep 2007 13:04:49 +0900
 
 cowdancer (0.37) unstable; urgency=low
 
